add plugin SonarLint and run Sonar Qube